# word-similarity

./: Cargo.toml  README.md
src/: main.rs
