[package]
name = "word_similarity"
version = "0.1.0"
edition = "2021"
authors = ["Roderik von Maltzahn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^3.0.0"
rayon = "^1.5.1"
strsim = "^0.10.0"
indicatif = "0.15.0"
chrono = "0.4.19"

[profile.release]
lto = true
